--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -12,10 +12,12 @@
     "javascriptreact",
     "typescript",
     "typescriptreact",
+    "vue",
     "json",
     "html",
     "css",
-    "go"
+    "go",
+    "php"
   ],
   "prettier.eslintIntegration": true,
   "eslint.autoFixOnSave": true,
@@ -23,7 +25,8 @@
     "javascript",
     "javascriptreact",
     "typescript",
-    "typescriptreact"
+    "typescriptreact",
+    "vue"
   ],
   "prettier.disableSuccessMessage": true,
   "suggest.removeDuplicateItems": true,
