clean up extra keys & values

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -15,8 +15,7 @@
     "vue",
     "json",
     "html",
-    "css",
-    "go"
+    "css"
   ],
   "prettier.eslintIntegration": true,
   "eslint.autoFixOnSave": true,
