--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -3,21 +3,18 @@
   "typescript.validate.enable": false,
   "diagnostic.warningSign": "⚠",
   "diagnostic.errorSign": "✗",
-  "diagnostic.hintSign": "⚠",
-  "diagnostic.infoSign": "⚠",
+  "diagnostic.hintSign": "💡",
+  "diagnostic.infoSign": "⚡",
   "diagnostic.enable": true,
   "coc.preferences.formatOnSaveFiletypes": [
     "Markdown",
     "javascript",
-    "javascriptreact",
     "typescript",
-    "typescriptreact",
     "vue",
     "json",
     "html",
     "css",
-    "php",
-    "go"
+    "php"
   ],
   "prettier.eslintIntegration": true,
   "eslint.autoFixOnSave": true,
